# filebeat-template

./: .gitignore  docker-compose.yml  filebeat.docker.yml  pyproject.toml  requirements.txt
api/: main.py
app/: Dockerfile
app/api/: main.py
