[tool.poetry]
name = "fast-api-app"
version = "0.1.0"
description = "FastAPI user guide passing."
authors = ["Valentin Vorobyov <voro6yov.valentin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
